--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -10,5 +10,9 @@
   "light": "نهاري",
   "dark": "ليلي",
   "english": "العربية",
-  "name": "السورة"
+  "name": "السورة",
+  "radio_station": "اذاعة القران الكريم",
+  "praises": "عدد التسبيحات",
+  "ahadeth": "الاحاديث"
+
 }
